# userver-demo

./: CMakeLists.txt  README.md  build.sh  http-client.cpp  main.cpp  static_config.yaml
.devcontainer/: Dockerfile  devcontainer.json
sample/: main.cpp
sample/include/controllers/: webhook.hpp
